# mini-apollo

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml  test.yml
mini_apollo/: __init__.py  client.py  config.py
tests/: conftest.py  test_client.py  test_config.py
