[project]
name = "mini-apollo"
version = "0.1.0"
description = "A lightweight Apollo Config SDK for Python."
requires-python = ">=3.9"
readme = "README.md"
license = "MIT"
dependencies = [
    "aiohttp>=3.12.0",
    "requests>=2.30.0"
]

[project.optional-dependencies]
test = [
    "pytest>=6.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "responses>=0.23.0",
    "aioresponses>=0.7.0"
]
